--- a/docs/bpu_design_document/BPUDesignDoc.adoc
+++ b/docs/bpu_design_document/BPUDesignDoc.adoc
@@ -214,11 +214,33 @@ which bolts the Branch Prediction Unit into the Olympia simulator.
 === Parameterization of BPU
 1. `ghr_size` - Maximum number of branch history bits stored in Global
 History Register (GHR)
+2.  `ghr_bits_for_hash` - Number of history bits from GHR used for hashing with
+PC, to finally index into PHT.
+3.  `pht_size` - Maximum number of entries stored in Pattern History Table.
+4.  `ctr_bits` - Number of bits used by counter in PHT to make prediction.
+5.  `btb_size` - Maximum number of entries which can be allocated to
+the BTB.
+6.  `ras_size` - Maximum number of entries which can be pushed to the RAS.
+7.  `ras_enable_overwrite` - Boolean flag to set whether newer entries to
+RAS on maximum capacity should overwrite or not.
 
-===  C++ Class Description
+8. `tage_bim_table_size` - Size of the bimodal table of TAGE
+9. `tage_base_ctr_bits` - Number of bits used to make prediction by bimodal table of TAGE.
+
+10. `num_of_logical_table` - Describes the number of logical tables in SC indexed with same number
+of shortest history lengths
+
+11. `loop_pred_table_size` - Defines the maximum number of possible entries in the
+loop predictor table
+12. `loop_pred_table_way` - Defines the Way size of the loop predictor table
+
+[[Class_Description_of_BPU]]
+===  Class Description of BPU
 * Inherits `sparta::Unit`
 * Inherits Olympia's Branch Prediction API
-* Inherits `BasePredictor` and `TAGE_SC_L` class.
+* Includes `PredictionInput`, `PredictionOutput`, `UpdateInput` class.
+* Includes `BasePredictor` and `TAGE_SC_L` class.
+* Contains private member `ghr_` to represent GHR.
 
 === Function list
 ***   `void recievePredictionRequest()`
@@ -235,6 +257,11 @@ History Register (GHR)
         ** sends prediction to Fetch unit.
         ** makes entry in FTQ.
         ** Later on, handle any potential prediction override between TAGE and BasePredictor.
+
+*** `updateGHRTaken()` - shifts all history bits by 1 position to left, and set last bit as 1.
+
+*** `updateGHRNotTaken()` - shifts all history bits by 1 position to left, and set last bit as 0.
+
 
 
 [[Description_of_Base_Predictor]]
@@ -274,33 +301,23 @@ branch is actually (predicted to be) taken is a different question.
 
 ** Direction of branch is predicted by PHT and TAGE-SC-L
 
-[[Parameterization]]
-=== Parameterization
+[[class_description_of_BasePredictor]]
+=== Class Description of BasePredictor
 
-1.  `ghr_bits_for_hash` - Number of history bits from GHR used for hashing with
-PC, to finally index into PHT.
-2.  `pht_size` - Maximum number of entries stored in Pattern History Table.
-3.  `btb_size` - Maximum number of entries which can be allocated to
-the BTB.
-4.  `ras_size` - Maximum number of entries which can be pushed to the RAS.
-5.  `ras_enable_overwrite` - Boolean flag to set whether newer entries to
-RAS on maximum capacity should overwrite or not.
+** constructor - `BasePredictor(uint32_t pht_size, uint8_t ctr_bits,
+uint32_t btb_size, uint32_t ras_size)`
 
+** Instantiate PatternHistoryTable class with appropriate params in constructor.
 
-=== C++ Class Description
+** Instantiate BranchTargetBuffer class with appropriate params in constructor.
 
-** Inherits `PHTEntry` and `BTBEntry` class
+** Instantiate ReturnAddressStack class with appropriate params in constructor.
 
-** Initializes PHT as a hashmap of PC and `PHTEntry`
-
-** Initializes BTB as a hashmap of PC and `BTBEntry`
-
-** Initializes RAS as an empty stack of `uint64_t`
 
 [[Pattern_History_Table]]
 === 1. Pattern History Table
 
-An array of n bit counters to predict direction of branches. It is indexed by a
+An hashmap of n bit counters to predict direction of branches. It is indexed by a
 GShare hash (XOR) of PC and some specific number of last few branch history bits.
 
 [[operation]]
@@ -310,18 +327,18 @@ Whenever a PC is received by the BPU, the PC and the last several bits of global
 registers are hashed to index into the PHT. The counter at this particular index provides
 the prediction that whether the branch will be taken or not.
 
-[[Parameterization_of_PHT]]
-==== Parameterization
+[[class_description_of_PHT]]
+==== Class description of PatternHistoryTable
 
-1.  `pht_size` - Maximum number of entries stored in Pattern History Table.
-2.  `ghr_bits_for_hash` - Number of history bits from GHR utilized for hashing with
-    PC, to finally index into PHT.
-3.  `ctr_bits` - Number of bits used by counter used to make prediction.
+** constructor - `PatternHistoryTable(uint32_t pht_size, uint8_t ctr_bits)`
 
-[[Class_Description_of_PHTEntry]]
-==== Class Description for PHTEntry
+** instantiate `std::map<uint64_t, uint8_t> pattern_history_table_`
 
-** `uint64_t predCtr`
+[[Functions_list_of_PHT]]
+==== Functions list
+** `void incrementCounter(uint32_t idx)` - To increment counter within the set bound of ctr_bits.
+** `void decrementCounter(uint32_t idx)` - To decrement counter.
+** `uint8_t getPrediction(uint32_t idx)` - To get prediction.
 
 [[Branch_Target_Buffer]]
 === 2. Branch Target Buffer
@@ -334,10 +351,12 @@ Tagged entry table in which a PC is used to find a matching target.
 Whenever a PC is received by the BPU, it is used to index into the BTB,
 which contains the target address of the next instruction.
 
-[[Class_Description_of_BTBEntry]]
-==== Class Description of BTBEntry
+[[class_description_of_BTB]]
+==== Class description of BranchTargetBuffer
 
-** `uint64_t targetPC`
+** constructor - `BranchTargetBuffer(uint32_t btb_size)`
+
+** Initializes `std::map <uint64_t, uint64_t> branch_target_buffer_`
 
 
 [[BTB_Functions_List]]
@@ -351,6 +370,11 @@ particular PC.
 3. `uint64_t getPredictedPC(uint64_t PC)` - returns the target PC corresponding to the
 PC
 
+4. `bool isHit(uint64_t PC)` - returns whether there is an entry for the PC in BTB or not.
+
+
+
+
 [[Return_Address_Stack]]
 === 3. Return Address Stack
 
@@ -362,27 +386,21 @@ RAS is a small separate predictor used to predict returns.
 ** Push the PC on the stack whenever a "call" is made
 ** Return the PC whenever "ret" is called and pop the entry from RAS
 
+[[Class_description_of_RAS]]
+==== Class Description of ReturnAddressStack
 
-[[Parameterization_of_RAS]]
-==== Parameterization
-1. `ras_stack_size` - Maximum number of entries which can be pushed to the RAS.
+** constructor - `ReturnAddressStack(uint32_t ras_size)`
 
-2. `ras_enable_overwrite` - Boolean flag to set whether newer entries to RAS on
-   maximum capacity should overwrite or not.
-
-
-==== C++ Class Description of RASEntry
-
-* `uint64_t PC`
+** Initializes `std::stack<uint64_t> return_address_stack_`
 
 [[RAS_Functions_List]]
-==== Functions List
+==== Functions list
 
-1. `pushEntry()` - Whenever a JAL (call) instruction is executed, the PC is
+1. `void pushAddress()` - Whenever a JAL (call) instruction is executed, the PC is
 pushed to the RAS stack. If the RAS is already full, then depending on the value
 of `ras_enable_overwrite` parameter, overwrite the older entry.
 
-2. `popEntry()` - Whenever a JALR (ret) instruction is being executed, the topmost
+2. `uint64_t popAddress()` - Whenever a JALR (ret) instruction is being executed, the topmost
 element of the RAS is popped and returned to the Fetch unit.
 
 
