--- a/docs/bpu_design_document/BPUDesignDoc.adoc
+++ b/docs/bpu_design_document/BPUDesignDoc.adoc
@@ -225,14 +225,15 @@ the BTB.
 RAS on maximum capacity should overwrite or not.
 
 8. `tage_bim_table_size` - Size of the bimodal table of TAGE
-9. `tage_base_ctr_bits` - Number of bits used to make prediction by bimodal table of TAGE.
+9. `tage_bim_ctr_bits` - Number of bits used to make prediction by bimodal table of TAGE.
+10. `tage_tagged_table_num` - Number of tagged components in TAGE predictor
 
-10. `num_of_logical_table` - Describes the number of logical tables in SC indexed with same number
+11. `logical_table_num` - Describes the number of logical tables in SC indexed with same number
 of shortest history lengths
 
-11. `loop_pred_table_size` - Defines the maximum number of possible entries in the
+12. `loop_pred_table_size` - Defines the maximum number of possible entries in the
 loop predictor table
-12. `loop_pred_table_way` - Defines the Way size of the loop predictor table
+13. `loop_pred_table_way` - Defines the Way size of the loop predictor table
 
 [[Class_Description_of_BPU]]
 ===  Class Description of BPU
@@ -274,9 +275,9 @@ Buffer (BTB), and a Return Address Stack (RAS).
 [[Operation]]
 === Operation
 
-image:media/bpu_process_flowchart.png[image,width=700, height=366]
+image:media/bpu_process_flowchart.png[image,width=800, height=366]
 
-** If the instruction type is a "call", the current PC is pushed to the
+* If the instruction type is a "call", the current PC is pushed to the
 RAS, and is also sent to the BTB. If it is a hit, then the target is
 sent out. Otherwise, an entry is made to the BTB.
 
@@ -373,8 +374,6 @@ PC
 4. `bool isHit(uint64_t PC)` - returns whether there is an entry for the PC in BTB or not.
 
 
-
-
 [[Return_Address_Stack]]
 === 3. Return Address Stack
 
@@ -404,7 +403,7 @@ of `ras_enable_overwrite` parameter, overwrite the older entry.
 element of the RAS is popped and returned to the Fetch unit.
 
 
-[[Description_of_TAGE-SC-L]]
+[[Description_of_TAGE_SC_L]]
 == Description of TAGE_SC_L
 
 The second level predictor implements a TAGE-SC-L predictor in order to predict
@@ -449,43 +448,46 @@ no matching tagged predictor component, the prediction given by default predicto
 10. tage_hist_alpha -
 11. tage_reset_useful_interval
 
-[[Parameterization_of_TAGE_BIM]]
-==== Parameterization of TAGE-BIM
-1. `tage_bim_table_size` - Size of the bimodal table of TAGE
-2. `tage_base_ctr_bits` - Number of bits used to make prediction by bimodal table of TAGE.
+[[Bimodal_table_of_TAGE]]
+==== Bimodal Table of TAGE
 
-[[Parameterization_of_Tagged_Component]]
-==== Parameterization of Tagged Component
-1. `uint16_t Tag` -
-2. `tage_ctr_bits` -
-3. `tage_useful_bits` - Number of bits which represents useful value
+Bimodal table of the TAGE predictor provides the base prediction for any prediction request.
+
+[[class_description_of_TAGE_BIM]]
+===== Class description of TAGE_BIM
+
+** constructor - `TageBIM(uint32_t tage_bim_table_size, uint8_t tage_base_ctr_bits)`
+
+** Initializes the `std::map<uint64_t, uint8_t> Tage_Bimodal_`
+
+[[Tagged_Component_of_TAGE]]
+==== Tagged Component of TAGE
+
+Tagged components of TAGE predictor provides prediction for different history lengths.
+
+[[class_description_of_TAGE_Tagged_Component]]
+===== Class description of Tagged Component of TAGE
+
+
+1. `uint16_t Tag`
+2. `uint8_t tage_ctr_bits` - represents the direction branch will take
+3. `uint8_t tage_useful_bits` - Number of bits which represents useful value
 
 
 [[Class_Description_of_TAGE]]
 ==== Class Description of TAGE
 
-** Inherits two separate classes to represent bimodal table and tagged component table each.
+** Includes `TageBIM` and `TageTaggedComponent` class.
 
-** Initializes an array of tagged components indexed by the hash of PC and history lengths
+** Initializes an array of `TageTaggedComponent` indexed by the hash of PC and different history
+lengths
 
-==== 1.a. Bimodal Table
-A table indexed by PC containing 2 bit counters to predict direct of branch
+** constructor - `Tage(uint16_t tage_bim_size, uint8_t tage_bim_ctr_bits,
+uint16_t tage_tagged_table_num, uint8_t tagged_ctr_bits, uint8_t tage_u_bits, uint8_t tage_hist_alpha)`
 
-==== Class Description of TAGE_BIMEntry
 
-`uint8_t predCountr;`
 
-==== 1.b. Tagged Component
-A table indexed by the hash of PC and geometrically increasing history length
-
-==== 1.b.1 Tagged Component Entry
-`pred` - represents the direction branch will take
-
-`u` - represents if the prediction made by same component turnmed out to be correct or not last time.
-
-`tag`
-
-=== 2. SC
+=== 2. Statistical Corrector
 
 **Input** - Prediction + (Address, History) pair
 
@@ -497,15 +499,15 @@ TAGE predictor, therefore a relatively small Statistical Corrector
 predictor performs close to an unlimited size Statistical Corrector
 predictor [2].
 
-[[Parameterization_of_Statistical_Corrector]]
-==== Parameterization
-
-1. `num_of_logical_table` - Describes the number of logical tables indexed with same number
-of shortest history lengths
-
 [[Class_Description_of_SC]]
 ==== Class Description of Statistical Corrector
 
+** constructor - `TageStatisticalCorrector(uint16_t logical_table_num)`
+
+[[Functions_list_of_SC]]
+==== Functions list
+
+** `bool revertPred(uint16_t centeredPredSum, uint16_t centeredU)` - [2]
 
 [[Description_of_Loop_Predictor]]
 === 3. Loop Predictor
@@ -517,18 +519,19 @@ identification has reached a high confidence, i.e. when the loop has been
 executed several times with the same number of iterations.
 
 It uses a Loop Predictor table which is essentially a k-way set associative table
-whose entries is used to predict loops.
+whose entries are used to predict loops.
 
-[[Parameterization_of_loop_predictor_table]]
-==== Parameterization of Loop Predictor Table
+[[Class_description_of_LoopPredictor]]
+==== Class description of LoopPredictor
 
-1. `loop_pred_table_size` - Defines the maximum number of possible entries in the
-loop predictor table
-
-2. `loop_pred_table_way` - Defines the Way size of the loop predictor table
+** constructor - `LoopPredictor(uint32_t loop_pred_table_size, uint16_t loop_pred_table_way)`
 
 [[Class_Description_of_loop_predictor_entry]]
 ==== Class Description of LoopPredictorEntry
+
+** Constructor - `LoopPredictorEntry(uint16_t past_iter, uint16_t current_iter, uint16_t tag,
+uint8_t confidence, uint8_t age, bool direction)`
+
 1. `uint16_t past_iter` - Stores the 14-bit count for the number of iterations seen in past
 
 2. `uint16_t current_iter` - stores the 14-bit count for the number of iterations seen currently
@@ -540,6 +543,7 @@ loop predictor table
 5. `uint8_t age` - 8-bit counter signifying age of entry
 
 6. `bool direction` - Stores the direction bit
+
 
 [[Functions_list_of_loop_predictor]]
 ==== Functions List of LoopPredictor
@@ -557,29 +561,29 @@ the BPU, once instructions are finally committed.
 Similar to ROB, but it is decoupled from it. Implemented using a Queue.
 
 Entries are allocated to FTQ when predictions are sent to Fetch.
-Upon retirement of instructions, the `correctedPC` and `actuallyTaken` values are written,
+Upon retirement of instructions, the `correctedPC` and `correctedDirection` values are written,
 and then sent to BPU to update its internal state.
 
-[[Class_Description_of_FTQ]]
-===  Class Description of FTQ
-
-** Initialises a Queue of `FTQEntry`
-
 [[Class_Description_of_FTQEntry]]
-==== Class Description of FTQEntry
+=== Class Description of FTQEntry
 
 ** `uint64_t targetPC`
 
 ** `uint64_t correctedPC`
 
-** `bool pred`
+** `bool predDirection`
 
-** `bool actuallyTaken`
+** `bool correctedDirection`
+
+[[Class_Description_of_FTQ]]
+===  Class Description of FTQ
+
+** Initialises `std::vector<FTQEntry> fetch_target_queue_`
 
 [[Functions_list_of_FTQ]]
 ==== Functions list
-** `addEntry()` -
-** `removeEntry()` -
+** `addEntry(FTQEntry ftq_entry)` - adds an entry into the FTQ.
+** `removeEntry(FTQEntry ftq_entry)` - removes ftq_entry from the FTQ.
 
 
 
